Bug fix: check/x not showing on MQ entries after last try. Needs rebuild.

--- a/assess2/vue-src/src/assess2.css
+++ b/assess2/vue-src/src/assess2.css
@@ -612,26 +612,26 @@ span.inlinebtn:hover {
   .mqfillin-mq .mqinnerboxed {
     padding: 2px 3px;
   }
-  input[type=text].ansgrn, .mq-editable-field.ansgrn, .mqinnerboxed.ansgrn,
-  input[type=text].ansred, .mq-editable-field.ansred, .mqinnerboxed.ansred,
-  input[type=text].ansyel, .mq-editable-field.ansyel, .mqinnerboxed.ansyel,
-  input[type=text].ansorg, .mq-editable-field.ansorg, .mqinnerboxed.ansorg {
+  input[type=text].ansgrn, .mathquill-math-field.ansgrn, .mq-editable-field.ansgrn, .mqinnerboxed.ansgrn,
+  input[type=text].ansred, .mathquill-math-field.ansred, .mq-editable-field.ansred, .mqinnerboxed.ansred,
+  input[type=text].ansyel, .mathquill-math-field.ansyel, .mq-editable-field.ansyel, .mqinnerboxed.ansyel,
+  input[type=text].ansorg, .mathquill-math-field.ansorg, .mq-editable-field.ansorg, .mqinnerboxed.ansorg {
     background-repeat: no-repeat;
     background-position: right;
   }
-  input[type=text].ansgrn, .mq-editable-field.ansgrn, .mqinnerboxed.ansgrn {
+  input[type=text].ansgrn, .mathquill-math-field.ansgrn, .mq-editable-field.ansgrn, .mqinnerboxed.ansgrn {
     padding-right: 17px;
     background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9ImdyZWVuIiBzdHJva2Utd2lkdGg9IjMiIGZpbGw9Im5vbmUiPjxwb2x5bGluZSBwb2ludHM9IjIwIDYgOSAxNyA0IDEyIj48L3BvbHlsaW5lPjwvc3ZnPg==");
   }
-  input[type=text].ansred, .mq-editable-field.ansred, .mqinnerboxed.ansred {
+  input[type=text].ansred, .mathquill-math-field.ansred, .mq-editable-field.ansred, .mqinnerboxed.ansred {
     padding-right: 17px;
     background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9InJnYigxNTMsMCwwKSIgc3Ryb2tlLXdpZHRoPSIzIiBmaWxsPSJub25lIj48cGF0aCBkPSJNMTggNiBMNiAxOCBNNiA2IEwxOCAxOCIgLz48L3N2Zz4=");
   }
-  input[type=text].ansyel, .mq-editable-field.ansyel, .mqinnerboxed.ansyel {
+  input[type=text].ansyel, .mathquill-math-field.ansyel, .mq-editable-field.ansyel, .mqinnerboxed.ansyel {
     padding-right: 17px;
     background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9InJnYigyNTUsMTg3LDApIiBzdHJva2Utd2lkdGg9IjMiIGZpbGw9Im5vbmUiPjxwYXRoIGQ9Ik0gNS4zLDEwLjYgOSwxNC4yIDE4LjUsNC42IDIxLjQsNy40IDksMTkuOCAyLjcsMTMuNSB6IiAvPjwvc3ZnPg==");
   }
-  input[type=text].ansorg, .mq-editable-field.ansorg, .mqinnerboxed.ansorg {
+  input[type=text].ansorg, .mathquill-math-field.ansorg, .mq-editable-field.ansorg, .mqinnerboxed.ansorg {
     padding-right: 17px;
     background: right no-repeat url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9InJnYigyNTUsODUsMCkiIHN0cm9rZS13aWR0aD0iMyIgZmlsbD0ibm9uZSI+PHBhdGggZD0iTTE4IDYgTDYgMTggTTYgNiBMMTggMTgiIC8+PC9zdmc+");
   }
